# movie-feed

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: Dockerfile  audit.yml  audit.yml.disabled  cd.yml  cd.yml.disabled
lib/movie-feed/: Cargo.toml
lib/movie-feed/src/: api.rs  config.rs  main.rs
lib/movie-feed/src/api/: process_result.rs  routes.rs  rss.rs
lib/movie-feed/src/api/routes/: ok.rs  person.rs
lib/movie-feed/src/api/routes/person/: combined_credits.rs
lib/movie-feed/src/api/routes/person/combined_credits/: query_args.rs  release_status.rs  size.rs  sort_order.rs
lib/movie-feed/tests/assets/api/person/: get_combined_credits_19498.xml  get_combined_credits_19498_released.xml
lib/movie-feed/tests/assets/api/person/combined_credits/get/: default.xml
lib/movie-feed/tests/assets/api/person/combined_credits/get/release_status/: all.xml  has_release_date_max_release_4_months.xml
lib/serde-utils/: Cargo.toml
lib/serde-utils/src/: defaults.rs  lib.rs
lib/tmdb/: Cargo.toml
lib/tmdb-macros/: Cargo.toml
lib/tmdb-macros/src/: is_credit.rs  lib.rs  make_genre.rs
lib/tmdb-test-utils/: Cargo.toml
lib/tmdb-test-utils/response_files/3/person/19498/: GET.json
lib/tmdb-test-utils/response_files/3/person/19498-no-cast-credits/combined_credits/: GET.json
lib/tmdb-test-utils/response_files/3/person/19498/combined_credits/: GET.json
lib/tmdb-test-utils/response_files/3/person/240990/: GET.json
lib/tmdb-test-utils/response_files/3/person/240990/combined_credits/: GET.json
lib/tmdb-test-utils/response_files/3/person/48000/: GET.json
lib/tmdb-test-utils/response_files/3/person/48000/combined_credits/: GET.json
lib/tmdb-test-utils/response_files/3/person/5/: GET.json
lib/tmdb-test-utils/response_files/3/person/5/combined_credits/: GET.json
lib/tmdb-test-utils/response_files/3/person/956/: GET.json
lib/tmdb-test-utils/response_files/3/person/956-no-crew-credits/combined_credits/: GET.json
lib/tmdb-test-utils/response_files/3/person/956/combined_credits/: GET.json
lib/tmdb-test-utils/response_files/3/tests/: GET.json
lib/tmdb-test-utils/src/: api.rs  lib.rs
lib/tmdb-test-utils/src/api/: v3.rs
lib/tmdb-test-utils/src/api/misc/: status_codes.rs
lib/tmdb-test-utils/src/api/v3/: errors.rs  person.rs
lib/tmdb-test-utils/src/api/v3/person/: combined_credits.rs
lib/tmdb/response_files/3/person/19498-no-cast-credits/combined_credits/: GET.json
lib/tmdb/response_files/3/person/956/combined_credits/: GET.json
lib/tmdb/src/: api_version.rs  endpoints.rs  lib.rs  models.rs
lib/tmdb/src/endpoints/: person.rs
lib/tmdb/src/endpoints/person/: combined_credits.rs
lib/tmdb/src/endpoints/v3/: person.rs
lib/tmdb/src/endpoints/v3/person/: combined_credits.rs
lib/tmdb/src/models/: cast.rs  crew.rs  gender.rs  genre_id.rs  genres.rs  media_type.rs  person_details.rs  v3.rs
lib/tmdb/src/models/v3/: cast.rs  credit.rs  crew.rs  gender.rs  genre_id.rs  genres.rs  media_type.rs  person_details.rs  tmdb_error.rs
lib/tmdb/tests/: cached_combined_credits.rs  cached_person.rs
lib/tmdb/tests/assets/api/person/: 19498_biography.txt  5_biography.txt  956_biography.txt
lib/tmdb/tests/assets/api/person/combined_credits/: 1100_overview.txt  11868_overview.txt  1290379_overview.txt  1852_overview.txt  236235_overview.txt  273481_overview.txt  65369_overview.txt  67178_overview.txt
lib/utils/: Cargo.toml
lib/utils/src/: lib.rs
supply-chain/: audits.toml  config.toml
