[workspace]
resolver = "2"
members = ["lib/*"]
default-members = ["lib/movie-feed"]

[workspace.package]
authors = ["Calum4"]
categories = ["command-line-utilities"] # TODO categories
description = "Keep up-to-date with your favourite actors upcoming work via an RSS feed!"
edition = "2024"
keywords = ["feed", "movie", "tv", "tmdb", "rss"]
license = "MIT OR Apache-2.0"
publish = false
readme = "./README.md"
repository = "https://github.com/calum4/movie-feed"
version = "0.1.2"

[workspace.dependencies]
# Local crates
movie-feed = {path = "lib/movie-feed", version = "0.1.0"}
serde-utils = {path = "lib/serde-utils", version = "0.0.0"}
tmdb = {path = "lib/tmdb", version = "0.0.0"}
tmdb-macros = {path = "lib/tmdb-macros", version = "0.0.0"}
tmdb-test-utils = {path = "lib/tmdb-test-utils", version = "0.0.0"}

# Non-local crates
tokio = {version = "1.46.1", features = ["rt", "rt-multi-thread", "macros"]}
tracing = {version = "0.1.41", features = []}
tracing-subscriber = {version = "0.3.19", features = ["env-filter"]}
reqwest = {version = "0.12.22", features = ["json", "native-tls-vendored"]}
serde = {version = "1.0.219", features = ["serde_derive"]}
serde_json = {version = "1.0.140", features = []}
chrono = {version = "0.4.41", features = ["serde"]}
secrecy = {version = "0.10.3", features = []}
thiserror = {version = "2.0.12", features = []}
http = {version = "1.3.1", features = []}

[workspace.lints.rust]
unsafe_code = "forbid"
