[package]
name = "movie-feed"
repository = "https://github.com/calum4/movie-feed/tree/main/lib/movie-feed"
publish = false
version = "0.0.0"

authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
# Local crates
tmdb = {workspace = true, features = ["serde_serialize"]}

# Non-local crates
tokio = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
reqwest = {workspace = true}
serde = { workspace = true }
secrecy = {workspace = true, features = ["serde"]}
thiserror = {workspace = true}

figment = {version = "0.10.19", features = ["env"]}
axum = {version = "0.8.4", features = []}
tower-http = {version = "0.6.4", features = ["trace", "request-id", "timeout", "add-extension"]}
axum-client-ip = {version = "1.0.0", features = []}

[lints]
workspace = true
