[package]
name = "movie-feed"
repository = "https://github.com/calum4/movie-feed/tree/main/lib/movie-feed"
publish = true

version.workspace = true
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
# Local crates
tmdb = {workspace = true, features = ["cached"]}
serde-utils = {workspace = true, features = []}
utils = {workspace = true, features = []}

# Non-local crates
tokio = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
reqwest = {workspace = true}
serde = { workspace = true }
secrecy = {workspace = true, features = ["serde"]}
thiserror = {workspace = true}
chrono = {workspace = true}

figment = {version = "0.10.19", features = ["env"]}
axum = {version = "0.8.4", features = []}
tower-http = {version = "0.6.6", features = ["trace", "request-id", "timeout", "add-extension"]}
axum-client-ip = {version = "1.1.3", features = []}
rss = {version = "2.0.12", features = []}
itertools = {version = "0.14.0", features = []}
mime = {version = "0.3.17", features = []}
ammonia = {version = "4.1.2", features = []}
humantime = {version = "2.3.0", features = []}

[dev-dependencies]
tmdb = {workspace = true, features = ["test_utils"]}
tmdb-test-utils = {workspace = true}

[lints]
workspace = true
