[package]
name = "serde-utils"
description = "Misc serde utility functions"
repository = "https://github.com/calum4/movie-feed/tree/main/lib/serde-utils"
publish = false
version = "0.0.0"

authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]

[lints]
workspace = true
