[package]
name = "serde-utils"
description = "Misc serde utility functions"
repository = "https://github.com/calum4/movie-feed/tree/main/lib/serde-utils"
publish = false
version = "0.0.0"

authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
serde = {workspace = true}

[dev-dependencies]
serde_json = {version = "1.0.141", features = []}

[lints]
workspace = true
