[package]
name = "tmdb-macros"
description = "Macros for the tmdb crate"
repository = "https://github.com/calum4/movie-feed/tree/main/lib/tmdb-macros"
publish = false
version = "0.0.0"

authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true

[lib]
proc-macro = true

[dependencies]
serde = {workspace = true}
serde_json = {workspace = true}

proc-macro2 = {version = "1.0.101", features = []}
syn = {version = "2.0.106", features = []}
quote = {version = "1.0.41", features = []}
unicode-segmentation = {version = "1.12.0", features = []}

[lints]
workspace = true
