[package]
name = "tmdb"
description = ""
repository = "https://github.com/calum4/movie-feed/tree/main/lib/tmdb"
publish = false
version = "0.0.0"

authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
tokio = {workspace = true}
tracing = {workspace = true}
reqwest = {workspace = true}
serde = {workspace = true}
chrono = {workspace = true}
secrecy = {workspace = true}
tmdb-macros = {workspace = true}
serde-utils = {workspace = true}
http = {workspace = true, optional = true}

[dev-dependencies]
http = {workspace = true}
tracing-test = {workspace = true}

[lints]
workspace = true

[features]
test_utils = ["http"]
use_prebaked_responses = []
serde_serialize = []
