[package]
name = "tmdb"
description = ""
repository = "https://github.com/calum4/movie-feed/tree/main/lib/tmdb"
publish = false
version = "0.0.0"

authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
# Workspace
tokio = {workspace = true}
tracing = {workspace = true}
reqwest = {workspace = true}
serde = {workspace = true}
chrono = {workspace = true}
secrecy = {workspace = true}
tmdb-macros = {workspace = true}
serde-utils = {workspace = true}
thiserror = {workspace = true}

# Remote
url = {version = "2.5.4", features = []}

# Optional
http = {workspace = true, optional = true}

[dev-dependencies]
http = {workspace = true}
static_assertions = {workspace = true}
tmdb-test-utils = {workspace = true}

[lints]
workspace = true

[features]
test_utils = ["http"]
serde_serialize = []
