[package]
name = "tmdb"
description = ""
repository = "https://github.com/calum4/movie-feed/tree/main/lib/tmdb"
publish = false
version = "0.0.0"

authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
# Workspace
tokio = {workspace = true}
tracing = {workspace = true}
reqwest = {workspace = true}
serde = {workspace = true}
chrono = {workspace = true}
secrecy = {workspace = true}
tmdb-macros = {workspace = true}
serde-utils = {workspace = true}
thiserror = {workspace = true}
http = {workspace = true}

# Remote
url = {version = "2.5.4", features = []}
cached = {version = "0.56.0", features = ["async"], optional = true}

[dev-dependencies]
tmdb-test-utils = {workspace = true}

[lints]
workspace = true

[features]
test_utils = []
cached = ["dep:cached"]
