[package]
name = "utils"
description = "Misc utils"
repository = "https://github.com/calum4/movie-feed/tree/main/lib/utils"
publish = false
version = "0.0.0"

authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]

[dev-dependencies]

[lints]
workspace = true
